--- a/sitio4.html
+++ b/sitio4.html
@@ -196,7 +196,7 @@
         <p class="text-center">Aprende sobre los fundamentos de las inversiones y cómo empezar a invertir con éxito.</p>
 
         <div class="module">
-            <h2><i class="fas fa-book icon"></i>Módulo 1: Introducción a las Inversiones</h2>
+            <h2><i class="fas fa-book icon"></i><a href="modulo1.html" target="_blank">Módulo 1: Introducción a las Inversiones</a></h2>
             <ul>
                 <li>¿Qué es una inversión?</li>
                 <li>Diferencia entre ahorro e inversión</li>
@@ -208,7 +208,7 @@
         </div>
 
         <div class="module">
-            <h2><i class="fas fa-chart-line icon"></i>Módulo 2: Tipos de Inversiones</h2>
+            <h2><i class="fas fa-chart-line icon"></i><a href="modulo2.html" target="_blank">Módulo 2: Tipos de Inversiones</a></h2>
             <ul>
                 <li>Inversiones en el Mercado de Valores: Acciones, Bonos, ETFs</li>
                 <li>Inversiones Inmobiliarias: Comprar propiedades y REITs</li>
@@ -219,7 +219,7 @@
         </div>
 
         <div class="module">
-            <h2><i class="fas fa-tools icon"></i>Módulo 3: Herramientas y Recursos para Invertir</h2>
+            <h2><i class="fas fa-tools icon"></i><a href="modulo3.html" target="_blank"> 3: Herramientas y Recursos para Invertir</a></h2>
             <ul>
                 <li>Cómo seleccionar un corredor de bolsa (broker)</li>
                 <li>Plataformas de inversión populares: Robinhood, eToro, etc.</li>
@@ -228,7 +228,7 @@
         </div>
 
         <div class="module">
-            <h2><i class="fas fa-lightbulb icon"></i>Módulo 4: Estrategias de Inversión</h2>
+            <h2><i class="fas fa-lightbulb icon"></i><a href="modulo4.html" target="_blank">Módulo 4: Estrategias de Inversión</a></h2>
             <ul>
                 <li>Estrategias a largo plazo: Compra y retención</li>
                 <li>Estrategias a corto plazo: Trading diario y swing trading</li>
@@ -238,7 +238,7 @@
         </div>
 
         <div class="module">
-            <h2><i class="fas fa-brain icon"></i>Módulo 5: Aspectos Psicológicos de la Inversión</h2>
+            <h2><i class="fas fa-brain icon"></i><a href="modulo5.html" target="_blank"> 5: Aspectos Psicológicos de la Inversión</a></h2>
             <ul>
                 <li>La psicología del inversor: Evitar decisiones emocionales</li>
                 <li>Comportamiento del mercado: Cómo afectan las emociones al mercado</li>
